@@ -15,7 +15,6 @@ import org.springframework.core.convert.ConversionService;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -25,14 +24,30 @@ public class ConversionWrapperService {
 
     public List<ModificationModel> convertModifications(List<Modification> changeset) {
         return changeset.stream()
+                .filter(modification -> filterUnusedModification(modification))
                 .map(change -> conversionService.convert(change, ModificationModel.class))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private static boolean filterUnusedModification(Modification modification) {
+        return !(modification.isSetPartyModification()
+                && modification.getPartyModification().isSetContractorModification()
+                && modification.getPartyModification().getContractorModification().isSetModification()
+                && modification.getPartyModification().getContractorModification().getModification().isSetCreation()
+                && modification.getPartyModification().getContractorModification().getModification().getCreation()
+                .isSetDummyEntity())
+                &&
+                !(modification.isSetPartyModification()
+                        && modification.getPartyModification().isSetShopModification()
+                        && modification.getPartyModification().getShopModification().isSetModification()
+                        && modification.getPartyModification().getShopModification().getModification()
+                        .isSetTurnoverLimitsModification());
     }
 
     public List<Modification> convertModificationModels(List<ModificationModel> modifications) {
         return modifications.stream()
                 .map(modification -> conversionService.convert(modification, Modification.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Claim convertClaim(ClaimModel claimModel) {
